--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
 	<meta charset="utf-8">
 	<title>MyMapsProject</title>
 	<base href="/">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
 	<script src="https://unpkg.com/core-js@2.4.1/client/shim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/ng2-bootstrap/x.x.x/ng2-bootstrap.min.js"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<script src="node_modules/ng2-bs3-modal/bundles/ng2-bs3-modal.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
